--- a/.github/workflows/public-staticfile.yml
+++ b/.github/workflows/public-staticfile.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to GCS
+name: Build and Deploy to S3
 
 on:
   workflow_dispatch:
@@ -27,20 +27,17 @@ jobs:
       - name: Build project
         run: pnpm build
 
-      - name: Setup gcloud CLI
-        uses: google-github-actions/auth@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Install gcloud CLI components
+      - name: Deploy to S3
         run: |
-          sudo apt-get install google-cloud-cli
-      
-      - name: Setup Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: game-460004
+          aws s3 sync ./out s3://line98.namnt.net --delete
 
-      - name: Deploy to Google Cloud Storage
-        run: |
-          gsutil -m rsync -r ./out gs://namnt-line98
+      # - name: Invalidate CloudFront cache
+      #   run: |
+      #     aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
